--- a/contactus.html
+++ b/contactus.html
@@ -611,7 +611,7 @@
                                     <div class="card-contact-us">
                                         <img class="card-contactus image" src="images/team_btech/Prasant_dey.jpeg" alt="">
                                         <div class=" card-contactus circle"></div>
-                                        <div class=" card-contactus title">Prashant Ku. Dey</div>
+                                        <div class=" card-contactus title">Prasant Dey</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
                                         <ul class="social-network social-circle center">
                                             <li><a class="icoFacebook" href="https://www.facebook.com/profile.php?id=100008463340900"><i class="fa fa-facebook"></i></a></li>
