--- a/events.html
+++ b/events.html
@@ -431,44 +431,9 @@
 
                         </div>
                     </div>
+
                     <div class="col-md-6 col-sm-12 col-lg-4 offset-md-3 offset-lg-0 my-5  px-0">
                         <div id="dialog-f3" class="opener event-card-holder">
-                            <div class="event-card ">
-                                <div class="item1 "></div>
-                                <div class="item2 "></div>
-                                <div class="item3 "></div>
-                                <div class="item4 "></div>
-                                <div class="item5">
-                                    <img class="item-img" src="images/fun/laser_maze.jpg">
-                                    <div class="item9"></div>
-                                    <div class="item10"><i class="fa fa-clock-o"></i></div>
-                                </div>
-
-                                <div class="item6 "></div>
-                                <div class="item7 "></div>
-                                <div class="item8 "></div>
-                            </div>
-                            <div class="event-card-title" data-wow-delay="0.5s">
-                                Lazer Maze
-                            </div>
-                            <div id="dialog-f3-c" class="dlg">
-                                <div class="ui-widget-content title">Lazer Maze</div>
-                                <div class="ui-widget-content content">
-                                    <p></p>
-                                    <p class=" para-dlg-2">It is a real life heist style game where you dodge lasers and finish the track levels as quickly as possible without setting off the alarm.
-                                    </p>
-                                    <p class=" para-dlg-2 "> You have to use your body balance and flexibility to reach the end of the room without touching the lasers.</p>
-
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="row">
-                    <div class="col-md-6 col-sm-12 col-lg-4 my-5  px-0">
-                        <div id="dialog-f4" class="opener event-card-holder">
                             <div class="event-card ">
                                 <div class="item1 "></div>
                                 <div class="item2 "></div>
@@ -487,7 +452,7 @@
                             <div class="event-card-title" data-wow-delay="0.5s">
                                 Minute to win it
                             </div>
-                            <div id="dialog-f4-c" class="dlg">
+                            <div id="dialog-f3-c" class="dlg">
                                 <div class="ui-widget-content title">Minute to win it</div>
                                 <div class="ui-widget-content content">
                                     <p></p>
@@ -495,6 +460,42 @@
                                     <p class=" para-dlg-2">The challenges will be quite innovative and truly take you on a funny enjoyable ride.</p>
                                     <p class=" para-dlg-3">No.of players per team: 1</p>
 
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-sm-12 col-lg-4 my-5  px-0">
+                        <div id="dialog-f4" class="opener event-card-holder">
+                            <div class="event-card ">
+                                <div class="item1 "></div>
+                                <div class="item2 "></div>
+                                <div class="item3 "></div>
+                                <div class="item4 "></div>
+                                <div class="item5">
+                                    <img class="item-img" src="images/fun/follow_my_steps.jpg">
+                                    <div class="item9"></div>
+                                    <div class="item10"><i class="fa fa-clock-o"></i></div>
+                                </div>
+
+                                <div class="item6 "></div>
+                                <div class="item7 "></div>
+                                <div class="item8 "></div>
+                            </div>
+                            <div class="event-card-title" data-wow-delay="0.5s">
+                                Follow my steps
+                            </div>
+                            <div id="dialog-f4-c" class="dlg">
+                                <div class="ui-widget-content title">Follow my steps</div>
+                                <div class="ui-widget-content content">
+                                    <p></p>
+                                    <p class=" para-dlg-1"><i>"Follow my steps, only then you can judge me"</i> Ohh sorry but we kinda modified it...you follow our steps, and then we will judge you.</p>
+                                    <p class=" para-dlg-2">Small steps in the right direction will take you to the destination.</p>
+                                    <p class=" para-dlg-2"><b>Judgement:</b> One who successfully completes the track in right order will win.</p>
+                                    <p class=" para-dlg-3">No.of players per team: 1</p>
                                 </div>
                             </div>
                         </div>
@@ -582,39 +583,6 @@
                                 <div class="item3 "></div>
                                 <div class="item4 "></div>
                                 <div class="item5">
-                                    <img class="item-img" src="images/fun/follow_my_steps.jpg">
-                                    <div class="item9"></div>
-                                    <div class="item10"><i class="fa fa-clock-o"></i></div>
-                                </div>
-
-                                <div class="item6 "></div>
-                                <div class="item7 "></div>
-                                <div class="item8 "></div>
-                            </div>
-                            <div class="event-card-title" data-wow-delay="0.5s">
-                                Follow my steps
-                            </div>
-                            <div id="dialog-f7-c" class="dlg">
-                                <div class="ui-widget-content title">Follow my steps</div>
-                                <div class="ui-widget-content content">
-                                    <p></p>
-                                    <p class=" para-dlg-1"><i>"Follow my steps, only then you can judge me"</i> Ohh sorry but we kinda modified it...you follow our steps, and then we will judge you.</p>
-                                    <p class=" para-dlg-2">Small steps in the right direction will take you to the destination.</p>
-                                    <p class=" para-dlg-2"><b>Judgement:</b> One who successfully completes the track in right order will win.</p>
-                                    <p class=" para-dlg-3">No.of players per team: 1</p>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="col-md-6 col-sm-12 col-lg-4 my-5  px-0">
-                        <div id="dialog-f8" class="opener event-card-holder">
-                            <div class="event-card ">
-                                <div class="item1 "></div>
-                                <div class="item2 "></div>
-                                <div class="item3 "></div>
-                                <div class="item4 "></div>
-                                <div class="item5">
                                     <img class="item-img" src="images/fun/e_gaming.jpg">
                                     <div class="item9"></div>
                                     <div class="item10"><i class="fa fa-clock-o"></i></div>
@@ -627,7 +595,7 @@
                             <div class="event-card-title" data-wow-delay="0.5s">
                                 E-gaming
                             </div>
-                            <div id="dialog-f8-c" class="dlg">
+                            <div id="dialog-f7-c" class="dlg">
                                 <div class="ui-widget-content title">E-gaming</div>
                                 <div class="ui-widget-content content">
                                     <p></p>
@@ -778,7 +746,7 @@
                         </div>
 
                     </div> -->
-                    <div class="col-md-6 col-sm-12 col-lg-4 my-5 offset-md-3 offset-lg-0  px-0">
+                    <div class="col-md-6 col-sm-12 col-lg-4 offset-md-3 offset-lg-0 my-5  px-0">
                         <div id="dialog-t3" class="opener event-card-holder">
                             <div class="event-card ">
                                 <div class="item1 "></div>
@@ -786,7 +754,7 @@
                                 <div class="item3 "></div>
                                 <div class="item4 "></div>
                                 <div class="item5">
-                                    <img class="item-img" src="images/technical/chankya_neeti.jpg">
+                                    <img class="item-img" src="images/fun/laser_maze.jpg">
                                     <div class="item9"></div>
                                     <div class="item10"><i class="fa fa-clock-o"></i></div>
                                 </div>
@@ -796,30 +764,26 @@
                                 <div class="item8 "></div>
                             </div>
                             <div class="event-card-title" data-wow-delay="0.5s">
-                                Chanakya Neeti
+                                Lazer Maze
                             </div>
                             <div id="dialog-t3-c" class="dlg">
-                                <br>
-                                <div class="ui-widget-content title sticky-top"> Chanakya Neeti </div>
-                                <br>
+                                <div class="ui-widget-content title">Lazer Maze</div>
                                 <div class="ui-widget-content content">
                                     <p></p>
-                                    <p class=" para-dlg-2"> We have all seen an episode of CSI or Law and Order, read a John Grisham book, or listen to a true-crime podcast and thought, "yeah, I could do that, I could solve the case".</p>
-                                    <p class=" para-dlg-2"> If you want to take your passion for mystery beyond reading books and listen to the podcast we have some good news.</p>
-                                    <p class=" para-dlg-2"> Use your detective instincts and common sense to solve the 10 real-life problems within a given time frame. </p>
-                                    <p class=" para-dlg-2"> Come Decrypt, Defuse, Decode and Survive. </p>
-                                    <p class=" para-dlg-3">Rule & Regulation</p>
+                                    <p class=" para-dlg-2">It is a real life heist style game where you dodge lasers and finish the track levels as quickly as possible without setting off the alarm.
+                                    </p>
+                                    <p class=" para-dlg-2 "> You have to use your body balance and flexibility to reach the end of the room without touching the lasers.</p>
 
-                                    <ul class=" para-dlg-4">
-                                        <li>No of pariticipants-1</li>
-                                        <li> Time:1 hr </li>
-                                        <li>Use of internet is prohibited.</li>
-                                    </ul>
+
                                 </div>
                             </div>
                         </div>
-
                     </div>
+
+
+
+
+
 
                 </div>
                 <div class="row">
@@ -959,7 +923,7 @@
                                 <div class="item3 "></div>
                                 <div class="item4 "></div>
                                 <div class="item5">
-                                    <img class="item-img" src="images/technical/blind_coding.jpg">
+                                    <img class="item-img" src="images/technical/chankya_neeti.jpg">
                                     <div class="item9"></div>
                                     <div class="item10"><i class="fa fa-clock-o"></i></div>
                                 </div>
@@ -969,31 +933,31 @@
                                 <div class="item8 "></div>
                             </div>
                             <div class="event-card-title" data-wow-delay="0.5s">
-                                Blind coding
+                                Chanakya Neeti
                             </div>
                             <div id="dialog-t6-c" class="dlg">
                                 <br>
-                                <div class="ui-widget-content title sticky-top">Blind coding </div>
+                                <div class="ui-widget-content title sticky-top"> Chanakya Neeti </div>
                                 <br>
                                 <div class="ui-widget-content content">
                                     <p></p>
-                                    <p class=" para-dlg-2"> Ever wondered what is to type code without seeing what you are writing. This event will let you experience this. You will have to write code when your monitor is turned off.</p>
-                                    <p class=" para-dlg-3">Specification:</p>
-                                    <p class=" para-dlg-2">Participants will be given a question for which they need to write a program in paper. After they are done, they will need to type their program into their computer by turning off the monitor. Points will be rewarded
-                                        on how many mistakes they made during typing.</p>
-                                    <p class=" para-dlg-3">Rules:</p>
+                                    <p class=" para-dlg-2"> We have all seen an episode of CSI or Law and Order, read a John Grisham book, or listen to a true-crime podcast and thought, "yeah, I could do that, I could solve the case".</p>
+                                    <p class=" para-dlg-2"> If you want to take your passion for mystery beyond reading books and listen to the podcast we have some good news.</p>
+                                    <p class=" para-dlg-2"> Use your detective instincts and common sense to solve the 10 real-life problems within a given time frame. </p>
+                                    <p class=" para-dlg-2"> Come Decrypt, Defuse, Decode and Survive. </p>
+                                    <p class=" para-dlg-3">Rule & Regulation</p>
+
                                     <ul class=" para-dlg-4">
-                                        <li>Number of participants- 1 .</li>
-                                        <li>Time: 1 hr.</li>
-                                        <li> Monitor should be off while typing.</li>
+                                        <li>No of pariticipants-1</li>
+                                        <li> Time:1 hr </li>
+                                        <li>Use of internet is prohibited.</li>
                                     </ul>
-
-
                                 </div>
                             </div>
                         </div>
 
                     </div>
+
                 </div>
                 <div class="row">
                     <div class="col-md-6 col-sm-12 col-lg-4 my-5  px-0">
@@ -1118,6 +1082,51 @@
                                         <li>Use of internet is prohibited.</li>
 
                                     </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-sm-12 col-lg-4 my-5 px-0">
+                        <div id="dialog-t10" class="opener event-card-holder">
+                            <div class="event-card ">
+                                <div class="item1 "></div>
+                                <div class="item2 "></div>
+                                <div class="item3 "></div>
+                                <div class="item4 "></div>
+                                <div class="item5">
+                                    <img class="item-img" src="images/technical/blind_coding.jpg">
+                                    <div class="item9"></div>
+                                    <div class="item10"><i class="fa fa-clock-o"></i></div>
+                                </div>
+
+                                <div class="item6 "></div>
+                                <div class="item7 "></div>
+                                <div class="item8 "></div>
+                            </div>
+                            <div class="event-card-title" data-wow-delay="0.5s">
+                                Blind coding
+                            </div>
+                            <div id="dialog-t10-c" class="dlg">
+                                <br>
+                                <div class="ui-widget-content title sticky-top">Blind coding </div>
+                                <br>
+                                <div class="ui-widget-content content">
+                                    <p></p>
+                                    <p class=" para-dlg-2"> Ever wondered what is to type code without seeing what you are writing. This event will let you experience this. You will have to write code when your monitor is turned off.</p>
+                                    <p class=" para-dlg-3">Specification:</p>
+                                    <p class=" para-dlg-2">Participants will be given a question for which they need to write a program in paper. After they are done, they will need to type their program into their computer by turning off the monitor. Points will be rewarded
+                                        on how many mistakes they made during typing.</p>
+                                    <p class=" para-dlg-3">Rules:</p>
+                                    <ul class=" para-dlg-4">
+                                        <li>Number of participants- 1 .</li>
+                                        <li>Time: 1 hr.</li>
+                                        <li> Monitor should be off while typing.</li>
+                                    </ul>
+
+
                                 </div>
                             </div>
                         </div>
