--- a/contactus.html
+++ b/contactus.html
@@ -476,7 +476,7 @@
                                     <div class="card-contact-us">
                                         <img class="card-contactus image" src="images/team_btech/ashutosh_adhikari.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
-                                        <div class=" card-contactus title">Asutosh Das Adhikari</div>
+                                        <div class=" card-contactus title">Ashutosh Das Adhikari</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
                                         <ul class="social-network social-circle center">
                                             <li><a class="icoFacebook" href="javascript:void(0)"><i class="fa fa-facebook"></i></a></li>
