--- a/events.html
+++ b/events.html
@@ -3,10 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="IGIT TECHNOVATION,IGITTECHNOVATION,technovation,technovation 2020,igit tech,igittechnovation,technovation 4.0,technovation sarang,igit,sarang,tech-fest,tech fest,techno-cultural-fest,igit sarang,Indira Gandhi Institute of Technology,home technovation,2020 technovation"
+    />
+    <meta name="description" content="The Techno-Cultural fest of the department of CSEA, IGIT Sarang." />
+    <meta name="author" content="Yashobanta Kumar Behera">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Events | Technovation 2020</title>
+    <title>Events</title>
 
     <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative|Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cabin|Lobster&display=swap" rel="stylesheet">
@@ -47,7 +51,7 @@
             <div class="collapse-nav collapse navbar-collapse text-center" id="navbarText">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="btn-nav raise" href="index.html">Home </a>
+                        <a class="btn-nav raise" href="index.html">Home</a>
                     </li>
                     <li class="nav-item active">
                         <a class="btn-nav text-white" href="#">Events<span class="sr-only">(current)</span></a>
@@ -122,6 +126,7 @@
                                 <br>
                                 <div class="ui-widget-content content">
                                     <p class=""></p>
+                                    <p class="para-dlg-1"><i>Come and Enjoy!. We have a Special guest waiting to make your night a lifetime experience.</i></p>
                                 </div>
                             </div>
                         </div>
@@ -153,6 +158,7 @@
                                 <br>
                                 <div class="ui-widget-content content">
                                     <p class=""></p>
+                                    <p class="para-dlg-1"><i>Come and Enjoy ! We have a Special guest waiting to rock you to the core!!</i></p>
                                 </div>
                             </div>
                         </div>
@@ -319,6 +325,87 @@
                                 <div class="item3 "></div>
                                 <div class="item4 "></div>
                                 <div class="item5">
+                                    <img class="item-img" src="images/cultural/step_up.jpg">
+                                    <div class="item9"></div>
+                                    <div class="item10"><i class="fa fa-clock-o"></i></div>
+                                </div>
+
+                                <div class="item6 "></div>
+                                <div class="item7 "></div>
+                                <div class="item8 "></div>
+                            </div>
+                            <div class="event-card-title" data-wow-delay="0.5s">
+                                Clash of Titans
+                            </div>
+                            <div id="dialog-7-c" class="dlg">
+                                <br>
+                                <div class="ui-widget-content title sticky-top">Clash of Titans</div>
+                                <br>
+                                <div class="ui-widget-content content">
+                                    <p></p>
+                                    <p class=" para-dlg-1"><i>“The job of feets is walking, but their hobby is dancing.”</i> A signature event of Technovation, “Clash of Titans” is a group dance competition, featuring the most talented crews across the nation. Your team, your
+                                        beats, your grooves, our arena. Are you up for the challenge?.</p>
+
+                                    <p class=" para-dlg-3">Rules:</p>
+                                    <ul class=" para-dlg-4">
+                                        <li>Each team consist of a minimum of 8 and a maximum of 20 members.</li>
+                                        <li>Music of the final round must be submitted well in advance to the co-ordinators.</li>
+                                        <li>On-stage at a time : 15 members.</li>
+                                        <li>Any pre-recorded or live music can be used for the performance</li>
+                                        <li>The performance should not exceed 8 minutes.</li>
+                                        <li>Any kind of props are allowed .</li>
+                                        <li>Any kind of props are allowed .</li>
+                                        <li>Any kind of misbehaviour would result in direct disqualification.</li>
+                                        <li>The decision taken by the organisers is final and binding for the performers.</li>
+                                    </ul>
+
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-md-6 col-sm-12 col-lg-4 my-5  px-0">
+                        <div id="dialog-8" class="opener event-card-holder">
+                            <div class="event-card ">
+                                <div class="item1 "></div>
+                                <div class="item2 "></div>
+                                <div class="item3 "></div>
+                                <div class="item4 "></div>
+                                <div class="item5">
+                                    <img class="item-img" src="images/cultural/flash_mob.jpg">
+                                    <div class="item9"></div>
+                                    <div class="item10"><i class="fa fa-clock-o"></i></div>
+                                </div>
+
+                                <div class="item6 "></div>
+                                <div class="item7 "></div>
+                                <div class="item8 "></div>
+                            </div>
+                            <div class="event-card-title" data-wow-delay="0.5s">
+                                Flashmob
+                            </div>
+                            <div id="dialog-8-c" class="dlg">
+                                <br>
+                                <div class="ui-widget-content title sticky-top">Flashmob </div>
+                                <br>
+                                <div class="ui-widget-content content">
+                                    <p></p>
+                                    <p class=" para-dlg-1">They gathered, they danced and they left. Gathering people together is an art and the one who holds someone’s attention is the artist. So let’s assemble to entertain and satirize the crowd .Come and let your body move
+                                        in every beat of the music.</p>
+
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-md-6 col-sm-12 col-lg-4 my-5  px-0">
+                        <div id="dialog-9" class="opener event-card-holder">
+                            <div class="event-card ">
+                                <div class="item1 "></div>
+                                <div class="item2 "></div>
+                                <div class="item3 "></div>
+                                <div class="item4 "></div>
+                                <div class="item5">
                                     <img class="item-img" src="images/cultural/fire_n_ice.jpg">
                                     <div class="item9"></div>
                                     <div class="item10"><i class="fa fa-clock-o"></i></div>
@@ -331,7 +418,7 @@
                             <div class="event-card-title" data-wow-delay="0.5s">
                                 Fire and Ice
                             </div>
-                            <div id="dialog-7-c" class="dlg">
+                            <div id="dialog-9-c" class="dlg">
                                 <br>
                                 <div class="ui-widget-content title sticky-top">Fire and Ice </div>
                                 <br>
