--- a/faqs.html
+++ b/faqs.html
@@ -3,10 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="IGIT TECHNOVATION,IGITTECHNOVATION,technovation,technovation 2020,igit tech,igittechnovation,technovation 4.0,technovation sarang,igit,sarang,tech-fest,tech fest,techno-cultural-fest,igit sarang,Indira Gandhi Institute of Technology,home technovation,2020 technovation"
+    />
+    <meta name="description" content="The Techno-Cultural fest of the department of CSEA, IGIT Sarang." />
+    <meta name="author" content="Yashobanta Kumar Behera">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Faqs | Technovation 2020</title>
+    <title>Faqs</title>
     <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Girassol|Josefin+Sans&display=swap" rel="stylesheet">
@@ -39,7 +43,7 @@
 
                 </li>
                 <li class="nav-item active">
-                    <a class="btn-nav text-white" href="#">FAQs <span class="sr-only">(current)</span></a>
+                    <a class="btn-nav text-white" href="#">FAQs<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="btn-nav raise" href="sponsor.html">Sponsors</a>
