--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="msvalidate.01" content="F0EB8193BFCE1E364ACB8E26FD32DCDD" />
-    <meta name="keywords" content="IGIT TECHNOVATION,IGITTECHNOVATION,technovation,technovation 2020,igit tech" />
-    <meta name="description" content="Branch Fest Of IGIT Sarang,CSEA Department" />
+    <meta name="keywords" content="IGIT TECHNOVATION,IGITTECHNOVATION,technovation,technovation 2020,igit tech,igittechnovation,technovation 4.0,technovation sarang,igit,sarang,tech-fest,tech fest,techno-cultural-fest,igit sarang,Indira Gandhi Institute of Technology,home technovation,2020 technovation"
+    />
+    <meta name="description" content="The Techno-Cultural fest of the department of CSEA, IGIT Sarang." />
+    <meta name="author" content="Yashobanta Kumar Behera">
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home | Technovation 2020</title>
+    <title>Welcome to Technovation 2020</title>
     <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative|Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
 
