--- a/theme.html
+++ b/theme.html
@@ -3,10 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="IGIT TECHNOVATION,IGITTECHNOVATION,technovation,technovation 2020,igit tech,igittechnovation,technovation 4.0,technovation sarang,igit,sarang,tech-fest,tech fest,techno-cultural-fest,igit sarang,Indira Gandhi Institute of Technology,home technovation,2020 technovation"
+    />
+    <meta name="description" content="The Techno-Cultural fest of the department of CSEA, IGIT Sarang." />
+    <meta name="author" content="Yashobanta Kumar Behera">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
-    <title>Theme | Technovation 2020</title>
+    <title>Theme</title>
 
     <link rel="stylesheet" href="css/theme.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
