--- a/events.html
+++ b/events.html
@@ -191,11 +191,21 @@
                                     <p></p>
                                     <p class="para-dlg-1"><i>“Success is a series of small wins”</i></p>
                                     <p></p>
-                                    <p class="para-dlg-2">The most awaited, charismatic, Mr. and Mrs. Technovation is back with a bang. An online event where you will be asked to send a picture of yours And the participant with the highest number of likes will qualify to the
-                                        next round followed by some other interesting rounds.</p>
+                                    <p class="para-dlg-2">The most awaited, charismatic, Mr. and Miss. Technovation is back with a bang. An online event where you will be asked to send a picture of yours And the participant with the highest number of likes will qualify to
+                                        the next round followed by some other interesting rounds.</p>
                                     <p></p>
-                                    <p class="para-dlg-2">The difference between ordinary and extraordinary is that little “extra”. Go that extra mile, Make it happen . Cause no one is you and that is your superpower</p>
-
+                                    <p class="para-dlg-2">The difference between ordinary and extraordinary is that little <b>“extra”</b>. Go that extra mile, Make it happen . Cause no one is you and that is your superpower</p>
+                                    <p class=" para-dlg-3">Rules:</p>
+                                    <ul class=" para-dlg-4">
+                                        <li>The picture should not have any effect and it should be less than 10mb</li>
+                                        <li>Top participants from boys and from girls will be selected on the basis of the number of likes they get.</li>
+                                        <li>The further rounds will be with many twists and turns.</li>
+                                        <li>Winner of the event will be decided based on the further rounds.</li>
+                                        <li>Mr. and Miss Technovation winner will get exciting prizes.</li>
+                                        <li>Use of auto likers is not allowed</li>
+                                        <li>Participants using autolikers will be disqualified.</li>
+                                        <li>Winners of the first round will be announced on the page.</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -354,7 +364,7 @@
                                         <li>Any pre-recorded or live music can be used for the performance</li>
                                         <li>The performance should not exceed 8 minutes.</li>
                                         <li>Any kind of props are allowed .</li>
-                                        <li>Any kind of props are allowed .</li>
+                                        <li>Usage of fire/water/smoke in any form is not allowed.</li>
                                         <li>Any kind of misbehaviour would result in direct disqualification.</li>
                                         <li>The decision taken by the organisers is final and binding for the performers.</li>
                                     </ul>
@@ -424,13 +434,19 @@
                                 <br>
                                 <div class="ui-widget-content content">
                                     <p></p>
-                                    <p class=" para-dlg-1"><i>"Dancing with the feet is one thing, but dancing with the Heart is another." </i></p>
-                                    <p class=" para-dlg-1"><i>And dancing with your favourite partner is a whole another feeling!!</i></p>
-                                    <p></p>
-                                    <p class=" para-dlg-2"> This is a duet dance competition with a little <b>Tadka</b> added to it.</p>
-                                    <p></p>
-                                    <p class=" para-dlg-2">Come, show your innovative moves, for the stage is yours. Sweat it out to make your Icy Fire Jodi win the hearts of the judges and the audience.</p>
-
+                                    <p class=" para-dlg-1"> We dance for laughter, we dance for tears, we dance for madness, we dance for fears, we dance for hopes, we dance for screams, we are the dancers, we create the dreams. Technovation gives you the chance to create these
+                                        dreams with your partner. Are you the best duo you think, then just prove it.!</i>
+                                    </p>
+                                    <p class=" para-dlg-3">Rules:</p>
+                                    <ul class=" para-dlg-4">
+                                        <li>Any pre-recorded or live music can be used for the performance.</li>
+                                        <li>Music for the performance must be submitted in advance.</li>
+                                        <li>Props can be used.</li>
+                                        <li>Team members can be boys, girls, or mix.</li>
+                                        <li>The decision taken by the organisers is final and binding for the performers.</li>
+                                        <li>Any kind of misbehaviour will lead to direct disqualification.</li>
+                                        <li>The time limit for each performance shouldnot exceed 4 minutes.</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
