cultural event rules added

--- a/events.html
+++ b/events.html
@@ -248,6 +248,35 @@
                                         So wake up beauties its time to beast for we are back with the 4th edition of Encantador, the fashion show.
                                     </p>
                                     <p class=" para-dlg-2">Be the designer of your own and let the fire inside you burn brighter than the fire around u.</p>
+                                    <p class=" para-dlg-3">Themes:</p>
+                                    <ul class=" para-dlg-4">
+                                        <li>Bollywood</li>
+                                        <li>Retro</li>
+                                        <li>Tribal</li>
+                                        <li>Wizardry</li>
+                                        <li>Exotic</li>
+                                    </ul>
+
+                                    <p class=" para-dlg-3">Rules:</p>
+                                    <ul class=" para-dlg-4">
+                                        <li>There is a team event where team will consist of 6 - 9members.</li>
+                                        <li>Every team will have to base their performance on a specific theme.</li>
+                                        <li>Every team will be given a time limit of maximum 3 minutes.</li>
+                                        <li>Every team will have to bring its own music track for the walk.</li>
+                                        <li>Every team will be required to face interaction via questions from the audience after the walk.</li>
+                                        <li>Each theme can be taken up by a maximum of 2 teams on a first come first serve basis.</li>
+                                    </ul>
+                                    <p class=" para-dlg-3">Judgement Criteria:</p>
+                                    <p class=" para-dlg-2">The teams will be judged on the basis of the following:</p>
+                                    <ul class=" para-dlg-4">
+                                        <li>Creativity</li>
+                                        <li>Costume design</li>
+                                        <li>Relevance to the theme</li>
+                                        <li>Originality of concept</li>
+                                        <li>Interaction with the audience</li>
+
+                                    </ul>
+
                                 </div>
                             </div>
                         </div>
@@ -284,6 +313,19 @@
                                     <p></p>
                                     <p class=" para-dlg-2">What is life without art and art without a tinge of drama? Presenting u Nukkad Natak. For those fond of good cinema and quality drama ,the stage is all set for you to adhere. Be a part of this Natak journey and unravel
                                         the whole new experience of artistic talent.</p>
+                                    <p class=" para-dlg-3">Rules:</p>
+                                    <ul class=" para-dlg-4">
+                                        <li>A team should have a minimum of 8 and a maximum of 20 people (exclusive of all helpers).</li>
+                                        <li>There will be only one round.</li>
+                                        <li>The maximum duration for the play is 15 minutes.</li>
+                                        <li>Teams exceeding time limit will be penalised and those crossing 5 minutes extra time will be disqualified.</li>
+                                        <li>No electronic music instruments will be allowed.</li>
+                                        <li>No sound system or mikes will be allowed.</li>
+                                        <li>Plays with social relevance are expected.</li>
+                                        <li>Use of fire (even diyas, candles or lighters) and water is not allowed.</li>
+                                        <li>Teams have to bring their own props and costumes.</li>
+                                    </ul>
+
                                 </div>
                             </div>
                         </div>
@@ -319,6 +361,14 @@
                                     <p></p>
                                     <p class=" para-dlg-2"><i>“The entire world ‘s a stage”</i>, they say. For the people who believe this , for the people with passion ans obsession, we have the right stage for you!. Be it comedy, mimicry, acting, magic, dance or any quirky
                                         thing you are passionately curious about, we have the stage ready for you!. Give the crowd and the judges the trime of their lives.</p>
+                                    <p class=" para-dlg-3">Rules:</p>
+                                    <ul class=" para-dlg-4">
+                                        <li><b>Dance:-</b> It may be solo or duet or group performance having maximum 8 members.(Duration: 3-4 min)</li>
+                                        <li><b>Song:-</b> Songs of any language may be sung. (Duration: 2-3 min).</li>
+                                        <li><b>Instrumental:-</b> All types of instruments are allowed.(Duration: 2-3 min)</li>
+                                        <li><b>Act:-</b> Mono act or skit can be performed. (Duration: 3-5 min)</li>
+                                        <li><b>Band Performance</b></li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -477,10 +527,10 @@
                                 <div class="item8 "></div>
                             </div>
                             <div class="event-card-title" data-wow-delay="0.5s">
-                                Task Scavangers
+                                Task Scavengers
                             </div>
                             <div id="dialog-f1-c" class="dlg">
-                                <div class="ui-widget-content title">Task Scavangers</div>
+                                <div class="ui-widget-content title">Task Scavengers</div>
                                 <div class="ui-widget-content content">
                                     <p></p>
                                     <p class=" para-dlg-2">Do you think you are crazy and daring enough? Then this is your call.</p>
