--- a/contactus.html
+++ b/contactus.html
@@ -214,7 +214,7 @@
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
                                         <ul class="social-network social-circle center">
                                             <li><a class="icoFacebook" href="https://www.facebook.com/sankalp.rath.52"><i class="fa fa-facebook"></i></a></li>
-                                            <li><a class="icoFacebook" href="javascript:void(0)"><i class="fa fa-phone"></i></a></li>
+                                            <li><a class="icoFacebook" href="tel:+919439717907"><i class="fa fa-phone"></i></a></li>
                                             <li><a class="icoFacebook" href="https://instagram.com/1.1_dollar_bill?igshid=82087b5pg9f8"><i class="fa fa-instagram"></i></a></li>
                                         </ul>
                                     </div>
